--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -45,18 +46,18 @@ dependencies {
     implementation 'com.tapadoo.android:alerter:6.1.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
-    implementation 'com.google.firebase:firebase-database-ktx:19.4.0'
+    implementation 'com.google.firebase:firebase-database-ktx:19.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.0'
     implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.lorentzos.swipecards:library:1.0.9'
-    implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'androidx.navigation:navigation-ui:2.3.0'
@@ -74,7 +75,9 @@ dependencies {
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.1'
     implementation 'com.skyline.widget:round-corner-layout:1.0.1'
     implementation 'me.jahirfiquitiva:FABsMenu:1.1.4'
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation files('libs/activation.jar')
+    implementation files('libs/additionnal.jar')
+    implementation files('libs/mail.jar')
     def htextview_version = "0.1.6"
     implementation 'com.ldoublem.loadingview:loadingviewlib:1.0'
     implementation "com.hanks:htextview-line:$htextview_version"
@@ -84,8 +87,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     testImplementation 'junit:junit:4.13'
     implementation 'cn.pedant.sweetalert:library:1.3'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.eightbitlab:blurview:1.6.3'
     implementation 'com.github.hearsilent:DiscreteSlider:1.2.1'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
@@ -94,10 +97,10 @@ dependencies {
     implementation 'me.relex:circleindicator:2.1.4'
     implementation 'com.github.demoNo:AutoScrollViewPager:v1.0.2'
     implementation 'com.victor:lib:1.0.4'
-    implementation 'com.google.firebase:firebase-ml-vision:24.1.0'
-    api 'com.google.firebase:firebase-ml-vision:24.1.0'
-    implementation 'com.google.firebase:firebase-ml-vision-automl:18.0.6'
-    implementation 'com.google.firebase:firebase-ml-model-interpreter:22.0.4'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
+    api "com.google.firebase:firebase-ml-vision:24.0.3"
+    implementation "com.google.firebase:firebase-ml-vision-automl:18.0.5"
+    implementation "com.google.firebase:firebase-ml-model-interpreter:22.0.3"
     implementation 'com.github.nipunru:nsfw-detector-android:1.0.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha07'
@@ -106,5 +109,5 @@ dependencies {
     implementation 'com.jaredrummler:animated-svg-view:1.0.6'
     implementation 'com.google.android.gms:play-services-ads:19.3.0'
     implementation 'com.anjlab.android.iab.v3:library:1.1.0'
-    implementation 'com.google.firebase:firebase-functions-ktx:19.1.0'
+    implementation 'com.google.firebase:firebase-functions-ktx:19.0.2'
 }
