--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,4 +110,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:19.3.0'
     implementation 'com.anjlab.android.iab.v3:library:1.1.0'
     implementation 'com.google.firebase:firebase-functions-ktx:19.0.2'
+    implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
 }
