--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,4 +111,6 @@ dependencies {
     implementation 'com.anjlab.android.iab.v3:library:1.1.0'
     implementation 'com.google.firebase:firebase-functions-ktx:19.1.0'
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
+    implementation 'com.akexorcist:localization:1.2.6'
+
 }
