--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
-    implementation 'com.google.firebase:firebase-auth:19.4.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:19.4.0'
     implementation 'com.google.firebase:firebase-database-ktx:19.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.1'
@@ -112,5 +112,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-functions-ktx:19.1.0'
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
     implementation 'com.akexorcist:localization:1.2.6'
-
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
 }
