--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,11 +46,11 @@ dependencies {
     implementation 'com.tapadoo.android:alerter:6.1.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.navigation:navigation-fragment:2.3.0'
-    implementation 'com.google.firebase:firebase-analytics:17.5.0'
-    implementation 'com.google.firebase:firebase-auth-ktx:19.4.0'
-    implementation 'com.google.firebase:firebase-database-ktx:19.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:20.0.0'
+    implementation 'com.google.firebase:firebase-database-ktx:19.5.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
@@ -58,9 +58,9 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.lorentzos.swipecards:library:1.0.9'
     implementation 'com.google.firebase:firebase-storage:19.2.0'
-    implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.0'
-    implementation 'androidx.navigation:navigation-ui:2.3.0'
+    implementation 'com.facebook.android:facebook-android-sdk:8.1.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.vanniktech:vntnumberpickerpreference:1.0.0'
@@ -83,9 +83,9 @@ dependencies {
     implementation "com.hanks:htextview-line:$htextview_version"
     implementation "com.hanks:htextview-base:$htextview_version"
     implementation "com.hanks:htextview-fade:$htextview_version"
-    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation 'com.google.firebase:firebase-messaging:21.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
     implementation 'cn.pedant.sweetalert:library:1.3'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -103,14 +103,15 @@ dependencies {
     implementation "com.google.firebase:firebase-ml-model-interpreter:22.0.3"
     implementation 'com.github.nipunru:nsfw-detector-android:1.0.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha07'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-beta01'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.muddzdev:styleabletoast:2.2.3'
     implementation 'com.jaredrummler:animated-svg-view:1.0.6'
-    implementation 'com.google.android.gms:play-services-ads:19.4.0'
+    implementation 'com.google.android.gms:play-services-ads:19.5.0'
     implementation 'com.anjlab.android.iab.v3:library:1.1.0'
     implementation 'com.google.firebase:firebase-functions-ktx:19.1.0'
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
     implementation 'com.akexorcist:localization:1.2.6'
-    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
+
 }
