--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,16 +48,14 @@ dependencies {
     implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
-    implementation 'com.google.firebase:firebase-auth-ktx:20.0.0'
-    implementation 'com.google.firebase:firebase-database-ktx:19.5.1'
+
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.lorentzos.swipecards:library:1.0.9'
-    implementation 'com.google.firebase:firebase-storage:19.2.0'
+
     implementation 'com.facebook.android:facebook-android-sdk:8.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
@@ -97,10 +95,7 @@ dependencies {
     implementation 'me.relex:circleindicator:2.1.4'
     implementation 'com.github.demoNo:AutoScrollViewPager:v1.0.2'
     implementation 'com.victor:lib:1.0.4'
-    implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
-    api "com.google.firebase:firebase-ml-vision:24.0.3"
-    implementation "com.google.firebase:firebase-ml-vision-automl:18.0.5"
-    implementation "com.google.firebase:firebase-ml-model-interpreter:22.0.3"
+
     implementation 'com.github.nipunru:nsfw-detector-android:1.0.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-beta01'
@@ -109,9 +104,21 @@ dependencies {
     implementation 'com.jaredrummler:animated-svg-view:1.0.6'
     implementation 'com.google.android.gms:play-services-ads:19.5.0'
     implementation 'com.anjlab.android.iab.v3:library:1.1.0'
-    implementation 'com.google.firebase:firebase-functions-ktx:19.1.0'
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
     implementation 'com.akexorcist:localization:1.2.6'
     implementation 'com.google.android.material:material:1.3.0-alpha03'
 
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:20.0.0'
+    implementation 'com.google.firebase:firebase-database-ktx:19.5.1'
+    implementation platform('com.google.firebase:firebase-bom:26.0.0')
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.android.gms:play-services-vision:20.1.2'
+    implementation 'com.google.firebase:firebase-functions-ktx:19.1.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
+    api "com.google.firebase:firebase-ml-vision:24.0.3"
+    implementation "com.google.firebase:firebase-ml-vision-automl:18.0.5"
+    implementation "com.google.firebase:firebase-ml-model-interpreter:22.0.3"
 }
