--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.afollestad:viewpagerdots:1.0.0' //เทส dot Viewpager
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
     implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
     implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
@@ -98,9 +99,7 @@ dependencies {
     implementation 'com.github.demoNo:AutoScrollViewPager:v1.0.2'
     implementation 'com.victor:lib:1.0.4'
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-beta01'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.muddzdev:styleabletoast:2.2.3'
     implementation 'com.jaredrummler:animated-svg-view:1.0.6'
     implementation 'com.google.android.gms:play-services-ads:19.5.0'
@@ -124,4 +123,6 @@ dependencies {
     api "com.google.firebase:firebase-ml-vision:24.1.0"
     implementation "com.google.firebase:firebase-ml-vision-automl:18.0.6"
     implementation "com.google.firebase:firebase-ml-model-interpreter:22.0.4"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
 }
